syntax = "proto3";

// this proto file is for api.hello/srv.hello

// request params.
message SayReq {
  string ping = 1;
}

// response content.
message SayRsp {
  string pong=2;
}

// HelloWorld is service API for client and server.
service HelloWorld {

  // requestResponse or fireAndForget.
  rpc Say(SayReq) returns (SayRsp) {}

  // get http request api
  rpc SayGet(ApiReq)returns(ApiRsp){}
}

message ApiReq{
  map<string, string> params = 1;
}

message ApiRsp{
  int32 code = 1;
  string msg = 2;
}